<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollDebugFull"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtDebugFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#444444"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:padding="8dp" />
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="12dp">

        <Button
            android:id="@+id/btnCopyLogFull"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_copy_log" />

        <Button
            android:id="@+id/btnShareLogFull"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/btn_share_log" />

        <Button
            android:id="@+id/btnEmptyLogFull"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/btn_empty_log" />
    </LinearLayout>

</LinearLayout>
